[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.2"}
pydantic = {extras = ["email"], version = "^2.11.4"}
pydantic-settings = "^2.9.1"
bcrypt = "^4.3.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-dotenv = "^1.1.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
python-multipart = "^0.0.20"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
alembic = "^1.15.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.4.0"
pre-commit = "^4.2.0"

[tool.isort]
known_first_party = ["auth"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "env", ".venv", "__pycache__", "migrations", "tests/*"]
inline-quotes = "double"
docstring-quotes = "double"
